--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
-    
-</body>
-</html>
+<html> <head><title>This is my first Pug file</title><link rel="stylesheet" href="main.css"/><script src="main.js"></script></head></html><body id="wrapper"><div class="wrapper"><div class="art" id="layer-1"><div class="noise"></div><div class="texts" id="layer-2"><span id="text_1">一生懸命働く  </span><span id="text_2">@Craaftx1</span><span id="text_3">216</span><span id="text_4">かもしれない</span><span id="text_5">ポスターを毎日作る</span><span id="text_6">マジディエルロペス © 2017</span></div><div class="door" id="door_1"></div><div class="door-shadow"></div><div class="door-shadow-2"></div><div class="door" id="door_2"></div><div class="gradient-1"></div><div class="gradient-2"></div><div class="round" id="layer-3"><div class="textbox"><span id="text_6">儿ーピング</span><h1 class="clip-text" id="text_7" data-text="作業">作業</h1><h1 class="clip-text" id="text_8">作業</h1></div></div><img class="man" src="https://cdn.discordapp.com/attachments/215765926392496128/518043029630615552/fallingman.png" id="layer-4"/></div></div></body>
